[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="Panel" type="Panel" parent="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VLayout" type="VBoxContainer" parent="Control/Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="HLayout" type="HBoxContainer" parent="Control/Panel/VLayout"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="Control/Panel/VLayout/HLayout"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 99.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Text Goes Here"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEdit" type="LineEdit" parent="Control/Panel/VLayout/HLayout"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 103.0
margin_right = 977.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
expand_to_len = false
focus_mode = 2
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
_sections_unfolded = [ "Size Flags" ]

[node name="Button" type="Button" parent="Control/Panel/VLayout/HLayout"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 981.0
margin_right = 1024.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Send"
flat = false

[node name="Reply" type="Label" parent="Control/Panel/VLayout"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Reply will come up here"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ReplyText" type="RichTextLabel" parent="Control/Panel/VLayout"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 1024.0
margin_bottom = 312.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
_sections_unfolded = [ "Size Flags", "custom_styles" ]

[node name="Log" type="Label" parent="Control/Panel/VLayout"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 316.0
margin_right = 1024.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Log will be here"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LogText" type="RichTextLabel" parent="Control/Panel/VLayout"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 334.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
_sections_unfolded = [ "Size Flags", "custom_styles" ]

[connection signal="pressed" from="Control/Panel/VLayout/HLayout/Button" to="." method="_on_Button_pressed"]


